# minigia

./: .gitignore  CMakeLists.txt  README.md  bunch.h  bunch_kokkos.h  compare_kokkos.h  core_diagnostics.cc  deposit.cc  deposit.h  distributed_fft3d_eigen.cc  distributed_fft3d_eigen.h  distributed_rectangular_grid.h  distributed_rectangular_grid_eigen.h  fft-main.cc  gsvector_v2.h  independent_kokkos.cc  independent_particle.cc  interpolate_rectangular_zyx.h  kokkos_test.cc  multi_array_offsets.h  populate.h  populate_kokkos.h  rectangular_grid.h  rectangular_grid_domain_eigen.h  rectangular_grid_eigen.h  space_charge_3d.cc  space_charge_3d_open_hockney.cc  space_charge_3d_open_hockney_eigen.cc  space_charge_3d_open_hockney_eigen.h
.cache/clangd/index/: base64.cpp.780949666F944096.idx  base64.h.FE8FEFA697EA3AAC.idx  (+33 more)
CMake/: FindFFTW.cmake
cmake/: MPITest.cmake
examples/: CMakeLists.txt  test_deposit.cc  test_point_charge.cc
misc/: CMakeLists.txt  bunch_sort.cc  diagnostics_mean.cc  diagnostics_mean_profile.cc  diagnostics_meanprofile.cc
profiling/: CMakeLists.txt
profiling/bunchsort/: CMakeLists.txt  bunch_sort.cc
profiling/deposit/: CMakeLists.txt  deposit_profile.cc
src/: CMakeLists.txt
src/minigia/: CMakeLists.txt
src/minigia/bunch/: CMakeLists.txt  bunch.cc  bunch.hpp  bunch_particles.cc  bunch_particles.hpp  bunch_train.cc  bunch_train.hpp  core_diagnostics.cc  core_diagnostics.hpp  diagnostics.hpp  diagnostics_bulk_track.cc  diagnostics_bulk_track.hpp  diagnostics_file.cc  diagnostics_file.hpp  diagnostics_full2.cc  diagnostics_full2.hpp  diagnostics_full2_host.cc  diagnostics_loss.cc  diagnostics_loss.hpp  diagnostics_particles.cc  diagnostics_particles.hpp  diagnostics_worker.cc  diagnostics_worker.hpp  fixed_t_z_converter.cc  fixed_t_z_converter.hpp  period.cc  period.hpp  populate.cc  populate.hpp  populate_global.cc  populate_global.hpp  populate_host.cc  populate_host.hpp
src/minigia/bunch/tests/: CMakeLists.txt  test_bunch.cc  test_bunch_particles.cc  test_bunch_traits.cc
src/minigia/collective/: CMakeLists.txt  deposit.cc  deposit.hpp  deposit_new.cc  deposit_new.hpp  fd_3d_impl.hpp  rectangular_grid.hpp  rectangular_grid_domain.hpp  space_charge_3d_fd.cc  space_charge_3d_fd.hpp  space_charge_3d_fd_alias.cc  space_charge_3d_fd_alias.hpp  space_charge_3d_fd_impl.hpp  space_charge_3d_fd_kernels.hpp  space_charge_3d_fd_utils.cc  space_charge_3d_fd_utils.hpp  space_charge_3d_open_hockney.cc  space_charge_3d_open_hockney.hpp  utils.hpp
src/minigia/collective/tests/: CMakeLists.txt  rod_bunch.h  test_deposit.cc  test_space_charge_3d_fd.cc
src/minigia/foundation/: CMakeLists.txt  distribution.cc  distribution.h  distribution.hpp  four_momentum.cc  four_momentum.h  four_momentum.hpp  normal_form.hpp  pcg_distribution.hpp  physical_constants.h  physical_constants.hpp  reference_particle.cc  reference_particle.h  reference_particle.hpp  trigon.hpp  trigon_traits.hpp
src/minigia/foundation/tests/: CMakeLists.txt  test_four_momentum.cc  test_reference_particle.cc
src/minigia/lattice/: CMakeLists.txt  dynamic_lattice.cc  dynamic_lattice.hpp  lattice.cc  lattice.hpp  lattice_element.cc  lattice_element.hpp  lattice_element_processor.cc  lattice_element_processor.hpp  lattice_element_slice.cc  lattice_element_slice.hpp  lattice_tree.cc  lattice_tree.hpp  madx.cc  madx.hpp  madx_reader.cc  madx_reader.hpp  mx_expr.cc  mx_expr.hpp  mx_parse.cc  mx_parse.hpp  mx_tree.cc  mx_tree.hpp
src/minigia/lattice/tests/: CMakeLists.txt  test_dynamic_lattice.cc  test_lattice.cc  test_madx_parser.cc  test_mx_expr.cc
src/minigia/simulation/: CMakeLists.txt  aperture.hpp  aperture_operation.hpp  aperture_operation_extractor.hpp  bunch_simulator.cc  bunch_simulator.hpp  bunch_simulator_impl.hpp  checkpoint.cc  checkpoint.hpp  checkpoint_json.cc  collective_operator_options.hpp  dummy_collective_operator.hpp  independent_operation.cc  independent_operation.hpp  independent_stepper_elements.cc  independent_stepper_elements.hpp  lattice_simulator.cc  lattice_simulator.hpp  lattice_simulator_host.cc  operation_extractor.cc  operation_extractor.hpp  operator.cc  operator.hpp  populate_stationary.hpp  propagate_actions.hpp  propagator.cc  propagator.hpp  resume.cc  resume.hpp  split_operator_stepper.cc  split_operator_stepper.hpp  split_operator_stepper_elements.cc  split_operator_stepper_elements.hpp  step.cc  step.hpp  stepper.cc  stepper.hpp
src/minigia/simulation/tests/: CMakeLists.txt  test_bunch_simulator.cc  test_bunch_simulator_mpi.cc
src/minigia/utils/: CMakeLists.txt  base64.cpp  catch_test_main.cc  cereal.hpp  cereal_files.cc  cereal_files.hpp  command_line_arg.cc  command_line_arg.hpp  commxx.cc  commxx.hpp  commxx_divider.cc  commxx_divider.hpp  digits.hpp  fast_int_floor.hpp  floating_point.hpp  gsvector.hpp  hdf5_file.cc  hdf5_file.h  hdf5_file.hpp  hdf5_misc.cc  hdf5_misc.hpp  hdf5_reader.hpp  hdf5_seq_writer.hpp  hdf5_serial_writer.cc  hdf5_serial_writer.hpp  hdf5_writer.cc  hdf5_writer.h  hdf5_writer.hpp  json.hpp  kokkos_types.hpp  logger.cc  logger.hpp  lsexpr.cc  lsexpr.hpp  minigia_json.hpp  multi_array_conversions.hpp  multi_array_typedefs.hpp  parallel_utils.cc  parallel_utils.hpp  simple_timer.cc  (+3 more)
src/minigia/utils/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
src/minigia/utils/tests/: CMakeLists.txt  test_command_line_arg.cc  test_commxx_mpi.cc  test_commxx_serdes.cc  test_hdf5_append_mpi.cc  test_hdf5_file_mpi.cc  test_hdf5_read_mpi.cc  test_hdf5_write_mpi.cc  test_kokkos.cc
src/utils/: CMakeLists.txt  catch_test_main.cc  command_line_arg.cc  command_line_arg.h  commxx.cc  digits.h  hdf5_file.cc  hdf5_misc.cc  hdf5_reader.h  hdf5_seq_writer.h  logger.h  parallel_utils.cc  parallel_utils.h  simple_timer.cc
src/utils/tests/: CMakeLists.txt  test_command_line_arg.cc  test_commxx_mpi.cc  test_commxx_serdes.cc  test_hdf5_append_mpi.cc  test_hdf5_file_mpi.cc  test_hdf5_read_mpi.cc  test_hdf5_write_mpi.cc  test_kokkos.cc
tests/: CMakeLists.txt
vectorclass/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+23 files in other folders)
